welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:4: error: '<-' expected but ')' found.
  for (!crossing()){
                  ^Poucet:21: error: illegal start of simple expression
} while (!sortieTrouvee())
^