welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var A: Int=0 

do{
  for (!crossing()){
    avance()
    if (estSurBiscuit==true){
      A=A+1
    }
  }
  if (A >= 3){
    gauche()
    A=0
  }
  	
  else{
   	droite()
    A=0
  }
  
  
} while (!sortieTrouvee())
avance()